syntax = "proto3";
package button;
import "github.com/overcyn/mochi/pb/text/text.proto";

option go_package = "button";
option objc_class_prefix = "MochiPBButton";

message Button {
    mochi.text.StyledText styledText = 1;
    int64 onPress = 2;
}
